--- a/jobs.html
+++ b/jobs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WSMS</title>
+        <title>WSMS-jobs</title>
         <link href="stuff.css" rel="stylesheet" type="text/css" />
     </head>
   <body>
@@ -16,9 +16,9 @@
     </ul>
     </div>
     <div class="main"> 
-    <h1>WSMS NEWSDESK</h1>
+    <h1>Jobs</h1>
     <h3>Jobs</h3>
-    <p>Want to run a news station? Become a broadcast jounalist? Make movies? Join WSMS!!!</p>
+    <p>Coming soon</p>
     <p></p>
 	  <video width="420" height="340" controls>
      <source src="" type="video/mp4">
