--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class='nav'>
     <h2>WSMS</h2>
     <ul>
-      <li>jobs</li>
+	<li><a href="jobs.html">jobs</a></li>
       <li>schedule</li>
       <li>Contact</li>
       <li>about us</li>
