--- a/jobs.html
+++ b/jobs.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
     <div class='nav'>
-    <h2>WSMS</h2>
+	    <h2><a href="index.html">WSMS</a></h2>
     <ul>
       <li>jobs</li>
       <li>schedule</li>
