--- a/sched.html
+++ b/sched.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>WSMS-Schedule</title>
+        <link href="stuff.css" rel="stylesheet" type="text/css" />
+    </head>
+  <body>
+    <div class="container">
+    <div class='nav'>
+      <h2><a href="index.html">WSMS</a></h2>
+    <ul>
+	<li><a href="jobs.html">jobs</a></li>
+      <li>schedule</li>
+      <li>Contact</li>
+      <li>about us</li>
+    </ul>
+    </div>
+    <div class="main"> 
+    <h1>WSMS Newsdesk</h1>
+    <h3>Schedule</h3>
+    <p>Coming soon.</p>
+    <p></p>
+	  <video width="420" height="340" controls>
+     <source src="" type="video/mp4">
+    </video>
+    </div>
+    </div>
+  </body>
+</html>
