--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>WSMS</h2>
     <ul>
 	<li><a href="jobs.html">jobs</a></li>
-      <li>schedule</li>
+	    <li><a href="sched.html">schedule</a></li>
       <li>Contact</li>
       <li>about us</li>
     </ul>
