--- a/jobs.html
+++ b/jobs.html
@@ -10,7 +10,7 @@
 	    <h2><a href="index.html">WSMS</a></h2>
     <ul>
       <li>jobs</li>
-      <li>schedule</li>
+	    <li><a href="sched.html">schedule</a></li>
       <li>Contact</li>
       <li>about us</li>
     </ul>
