--- a/jobs.html
+++ b/jobs.html
@@ -16,7 +16,7 @@
     </ul>
     </div>
     <div class="main"> 
-    <h1>Jobs</h1>
+    <h1>WSMS Newsdesk</h1>
     <h3>Jobs</h3>
     <p>Coming soon</p>
     <p></p>
