--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>WSMS</title>
+        <link href="stuff.css" rel="stylesheet" type="text/css" />
+    </head>
+  <body>
+    <div class="container">
+    <div class='nav'>
+      <h2><a href index.html>WSMS</a></h2>
+    <ul>
+	<li><a href="jobs.html">jobs</a></li>
+	    <li><a href="sched.html">schedule</a></li>
+      <li>Contact</li>
+      <li>about us</li>
+    </ul>
+    </div>
+    <div class="main"> 
+    <h1>WSMS NEWSDESK</h1>
+    <h3>Contact</h3>
+    <p>coming soon</p>
+    <p></p>
+    </div>
+    </div>
+  </body>
+</html>
