--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
     <div class='nav'>
-      <h2><a href index.html>WSMS</a></h2>
+      <h2><a href="index.html">WSMS</a></h2>
     <ul>
 	<li><a href="jobs.html">jobs</a></li>
 	    <li><a href="sched.html">schedule</a></li>
