--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
 	<li><a href="jobs.html">jobs</a></li>
 	    <li><a href="sched.html">schedule</a></li>
-      <li>Contact</li>
+	    <li><a href="contact.html">Contact</a></li>
       <li>about us</li>
     </ul>
     </div>
