--- a/about.html
+++ b/about.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>WSMS</title>
+        <link href="stuff.css" rel="stylesheet" type="text/css" />
+    </head>
+  <body>
+    <div class="container">
+    <div class='nav'>
+    <h2>WSMS</h2>
+    <ul>
+	<li><a href="jobs.html">jobs</a></li>
+	    <li><a href="sched.html">schedule</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li>about us</li>
+    </ul>
+    </div>
+    <div class="main"> 
+    <h1>WSMS NEWSDESK</h1>
+    <h3>About Us</h3>
+    <p>We are sutherland middle school's video studio. We are 100 times better than the rest, even AHS. The best of the best come and put on a broadcast to approxamately 600 students.</p>
+      <p></p>
+    </div>
+    </div>
+  </body>
+</html>
