--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<li><a href="jobs.html">jobs</a></li>
 	    <li><a href="sched.html">schedule</a></li>
 	    <li><a href="contact.html">Contact</a></li>
-	    <li><a href="about">about us</a></li>
+	    <li><a href="about.html">about us</a></li>
     </ul>
     </div>
     <div class="main"> 
