--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<li><a href="jobs.html">jobs</a></li>
 	    <li><a href="sched.html">schedule</a></li>
       <li>Contact</li>
-      <li>about us</li>
+	    <li><a href="about.html">about us</a></li>
     </ul>
     </div>
     <div class="main"> 
