--- a/jobs.html
+++ b/jobs.html
@@ -11,8 +11,8 @@
     <ul>
       <li>jobs</li>
 	    <li><a href="sched.html">schedule</a></li>
-      <li>Contact</li>
-      <li>about us</li>
+	    <li><a href="contacts">Contact</a></li>
+	    <li><a href="about">about us</a></li>
     </ul>
     </div>
     <div class="main"> 
