--- a/sched.html
+++ b/sched.html
@@ -11,8 +11,8 @@
     <ul>
 	<li><a href="jobs.html">jobs</a></li>
       <li>schedule</li>
-      <li>Contact</li>
-      <li>about us</li>
+	    <li><a href="contacts.html">Contact</a></li>
+	    <li><a href="contacts.html">about us</a></li>
     </ul>
     </div>
     <div class="main"> 
