--- a/jobs.html
+++ b/jobs.html
@@ -11,7 +11,7 @@
     <ul>
       <li>jobs</li>
 	    <li><a href="sched.html">schedule</a></li>
-	    <li><a href="contacts.html">Contact</a></li>
+	    <li><a href="contact.html">Contact</a></li>
 	    <li><a href="about.html">about us</a></li>
     </ul>
     </div>
