--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </ul>
     </div>
     <div class="main"> 
-	    <div class=head><h1>WSMS NEWSDESK</h1></div>
+	    <div class="head"><h1>WSMS NEWSDESK</h1></div>
     <h3>A Video Adventure</h3>
     <p>Want to run a news station? Become a broadcast jounalist? Make movies? Join WSMS!!!</p>
     <p></p>
